--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chatgpthelper",
-  "version": "0.1.0",
+  "name": "chatgpt-helper",
+  "version": "0.1.2",
   "license": "MIT",
   "author": "Nagarajan",
   "main": "dist/index.js",
@@ -46,5 +46,19 @@
       "path": "dist/chatgpthelper.esm.js",
       "limit": "10 KB"
     }
-  ]
+  ],
+  "devDependencies": {
+    "@size-limit/preset-small-lib": "^8.2.4",
+    "@tsconfig/recommended": "^1.0.2",
+    "dts-cli": "^2.0.3",
+    "husky": "^8.0.3",
+    "size-limit": "^8.2.4",
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "openai": "^3.3.0",
+    "zod": "^3.21.4",
+    "zod-to-json-schema": "^3.21.1"
+  }
 }
